test/corpus/compound.txt
================
modifier1 + function: /+
================
/+
---

(source_file
  (PROGRAM
    (block
      (segment
        (term
          (compound
            (modifier1)
            (function)
          )
        )
      )
    )
  )
)
