test/corpus/custom-modifiers.txt
================
ReduceRange: ReduceRange! ← /^2+1⇡
================
ReduceRange! ← /^2+1⇡
ReduceRange!+5
---

(source_file
  (PROGRAM
    (segment
      (term (identifier))
      (segment
        (leftArrow)
        (segment
          (term (primitive (modifier1)))
          (segment
            (term (placeHolder))
            (segment
              (term (primitive (function)))
              (segment
                (term (number))
                (segment
                  (term (primitive (function))))))))))
    (segment
      (term (identifier))
      (segment
        (term (primitive (function)))
        (segment (term (number)))
      )
    )
  )
)
