test/corpus/handle-dollar-string.txt
================
'$-string` takes the rest of the line
================
$ Hello
---

(source_file
  (PROGRAM
    (segment (dollarString))
  )
)

================
'$\n?` should be acceptable
================
$
---

(source_file
  (PROGRAM
    (segment (dollarString))
  )
)
